# dangerdeep

./: .gitignore
dangerdeep/: .clang-format  .cmake-format.py  AUTHORS.md  CMakeLists.txt  DEPENDENCIES.md  Dockerfile  LICENSE  LICENSE.md  LICENSE_CC0.txt  README.md  cppcheck_suppressions.txt  modernize-readme.txt
dangerdeep/cmake/: externalpackages.cmake
dangerdeep/cmake/modules/: FindFFMPEG.cmake  FindFFTW.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
dangerdeep/data/displays/logbook/: layout.xml
dangerdeep/data/displays/ships_sunk/: layout.xml
dangerdeep/data/displays/sub_bg/: layout.xml
dangerdeep/data/displays/sub_bridge/: layout.xml
dangerdeep/data/displays/sub_captainscabin/: layout.xml
dangerdeep/data/displays/sub_damage/: layout.xml
dangerdeep/data/displays/sub_gauges_II/: layout.xml
dangerdeep/data/displays/sub_gauges_VII/: layout.xml
dangerdeep/data/displays/sub_ghg/: layout.xml
dangerdeep/data/displays/sub_kdb/: layout.xml
dangerdeep/data/displays/sub_periscope/: layout.xml
dangerdeep/data/displays/sub_recogmanual/: layout.xml
dangerdeep/data/displays/sub_soldbuch/: layout.xml
dangerdeep/data/displays/sub_tdc/: layout.xml
dangerdeep/data/displays/sub_tdc2/: layout.xml
dangerdeep/data/displays/sub_torpedo/: layout.xml
dangerdeep/data/displays/sub_torpsetup/: layout.xml
dangerdeep/data/displays/sub_uzo/: layout.xml
dangerdeep/data/displays/sub_valves/: layout.xml
dangerdeep/data/objects/submarines/VIIc/: submarine_VIIc.data
dangerdeep/data/popups/sub_control/: layout.xml
dangerdeep/data/popups/sub_ecard/: layout.xml
dangerdeep/data/popups/sub_recogmanual/: layout.xml
dangerdeep/data/popups/sub_tdc/: layout.xml
dangerdeep/data/shaders/: geoclipmap.vshader  modelrender.fshader  modelrender_mirrorclip.vshader  reliefmapping.fshader  water.vshader
dangerdeep/data/texts/: common.csv
dangerdeep/doc/tex/: codeguide.tex
dangerdeep/src/: 2dtest.cpp  CMakeLists.txt  ai.cpp  ai.h  airplane.cpp  airplane.h  airplane_interface.cpp  airplane_interface.h  align16_allocator.h  angle.h  angular_table.h  area.h  binstream.h  bitstream.cpp  bitstream.h  bivector.h  bivectortest.cpp  box.h  bspline.h  bspline_test.cpp  bv_tree.cpp  bv_tree.h  bvtreeintersecttest.cpp  bzip.cpp  bzip.h  caustics.cpp  caustics.h  cfg.cpp  cfg.h  circle.h  coastmap.cpp  coastmap.h  color.h  condvar.h  constant.h  convoy.cpp  convoy.h  countrycodes.cpp  countrycodes.h  credits.cpp  (+245 more)
dangerdeep/src/cmake/: externalpackages.cmake
dangerdeep/src/cmake/modules/: FindFFMPEG.cmake  FindFFTW3.cmake  FindSDL2.cmake
dangerdeep/src/dftdtester/: glue.h  glue_x11.h  main.cpp  tests.cpp  tests.h  win32.cpp  win32.h  x11.cpp  x11.h
dangerdeep/src/oglext/: CMakeLists.txt  Macros.h  OglExt.cpp  OglExt.h  RCHashArray.hpp  RenderingContext.cpp  RenderingContext.hpp  glext.h
dangerdeep/src/test/: msgqueuetest.cpp  mutex_test.cpp  parser_test.cpp  ptrlist_test.cpp  testthreads.cpp  threadtest.cpp
dangerdeep/src/tinyxml/: CMakeLists.txt  tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
dangerdeep/src/tools/: erisExport.cpp  map_precompute.cpp
